# Physical_Design_Partition

./: CMakeLists.txt  README.md
include/: DataStructure.h  FMPartition.h  PhysicalDesign.h  parser.h
src/: FMPartition.cpp  PhysicalDesign.cpp  main.cpp  parser.cpp
tests/: output.txt  prob1.txtout.txt  test.txt  test.txtout.txt
